# EduboardV2_SW_ESP32S3_Test1

./: platformio.ini  sdkconfig.esp32-s3-devkitc-1  sdkconfig.esp32-s3-devkitc-1.old
components/eduboard2/: CMakeLists.txt  eduboard2.h  eduboard2_config.h  eduboard2_defines.h
components/eduboard2/eduboardADC/src/: eduboard2_adc_esp32_s3.c
components/eduboard2/eduboardAnalog/: eduboard2_analog.h
components/eduboard2/eduboardAnalog/src/: eduboard2_analog_esp32_s3.c
components/eduboard2/eduboardButton/: eduboard2_button.h
components/eduboard2/eduboardButton/src/: eduboard2_button_esp32_s3.c
components/eduboard2/eduboardBuzzer/: eduboard2_buzzer.h
components/eduboard2/eduboardBuzzer/src/: eduboard2_buzzer_esp32_s3.c
components/eduboard2/eduboardDAC/: eduboard2_dac.h
components/eduboard2/eduboardDAC/src/: eduboard2_dac_esp32_s3.c
components/eduboard2/eduboardFlash/: eduboard2_flash.h
components/eduboard2/eduboardFlash/src/: eduboard2_flash_esp32_s3.c  w25.c  w25.h
components/eduboard2/eduboardInit/src/: eduboard2_init.c
components/eduboard2/eduboardLCD/: eduboard2_lcd.h
components/eduboard2/eduboardLCD/src/: eduboard2_lcd_esp32_s3.c  glcdfont.c  ili9488.c  ili9488.h  lcdDriver.c  lcdDriver.h  st7789.c  st7789.h
components/eduboard2/eduboardLED/: eduboard2_led.h
components/eduboard2/eduboardLED/src/: eduboard2_led_esp32_s3.c
components/eduboard2/eduboardRTC/: eduboard2_rtc.h
components/eduboard2/eduboardRTC/src/: eduboard2_rtc_esp32_s3.c
components/eduboard2/eduboardRotaryEncoder/: eduboard2_rotary_encoder.h
components/eduboard2/eduboardRotaryEncoder/src/: eduboard2_rotary_encoder.c  eduboard2_rotary_encoder_esp32_s3.c
components/eduboard2/eduboardSDCard/: eduboard2_sdcard.h
components/eduboard2/eduboardSDCard/src/: eduboard2_sdcard_esp32_s3.c  integer.h  sd_io.c  sd_io.h  spi_io.h
components/eduboard2/eduboardSensor/: eduboard2_sensor.h
components/eduboard2/eduboardSensor/src/: eduboard2_stk8321_esp32_s3.c  eduboard2_tmp112_esp32_s3.c
components/eduboard2/eduboardSpiffs/: eduboard2_spiffs.h
components/eduboard2/eduboardSpiffs/src/: eduboard2_spiffs.c  fontx.c
components/eduboard2/eduboardTouch/: eduboard2_touch.h
components/eduboard2/eduboardTouch/src/: eduboard2_ft6236_esp32_s3.c
components/gpi2c/src/: gpi2c.c
components/gpspi/: CMakeLists.txt  gpspi.h
components/gpspi/src/: gpspi.c
components/i2cdev/: i2cdev.h
components/littlefs/: CMakeLists.txt
src/: main.c
